Rank.RankTotal BRankListReadOnly，只读。